--- a/ini/stm32f1.ini
+++ b/ini/stm32f1.ini
@@ -142,6 +142,8 @@ build_flags     = ${STM32F103Rx_creality.build_flags} -DXFER_BUILD
 extra_scripts   = ${STM32F103Rx_creality.extra_scripts}
                   pre:buildroot/share/scripts/upload.py
 upload_protocol = custom
+upload_speed    = 250000
+monitor_speed   = 250000
 
 #
 # Creality 512K (STM32F103RE)
